--- a/public/index.html
+++ b/public/index.html
@@ -88,17 +88,17 @@
 <body>
 	<div class="cont overflow">
 		<div class="left" style="width:70%;margin:30px">
-			<video id="video" controls="true" autoplay width="100%" src="http://gay.pirho.site:2086/video" type="video/webm">
-				<source src="http://gay.pirho.site:2086/video" type="video/avi">
-				<source src="http://gay.pirho.site:2086/video" type="video/mp4">
-				<source src="http://gay.pirho.site:2086/video" type="video/mvk"> Your browser does not support the video tag. </video>
+			<video id="video" controls="true" autoplay width="100%" src="http://moviebox.pirho.site//video" type="video/webm">
+				<source src="http://moviebox.pirho.site/video" type="video/avi">
+				<source src="http://moviebox.pirho.site/video" type="video/mp4">
+				<source src="http://moviebox.pirho.site/video" type="video/mvk"> Your browser does not support the video tag. </video>
 			<div style="margin-top:30px">
 				<a href="https://discord.gg/9rVf6hs" target="_blank"> <img src="http://ownageowls.com/Themes/LikeIPBTheme/images/theme/discord.png" height="68" width="68" /> </a>
-				<iframe width="99%" height="20%" src="http://gay.pirho.site:2086/videos" id="thing2"></iframe>
+				<iframe width="99%" height="20%" src="http://moviebox.pirho.site/videos" id="thing2"></iframe>
 			</div>
 		</div>
 		<div class="left" style="width:23%;padding-top:15px">
-			<iframe width="99%" height="99%" src="http://gay.pirho.site:2086/chat" id="thing"></iframe>
+			<iframe width="99%" height="99%" src="http://moviebox.pirho.site/chat" id="thing"></iframe>
 		</div>
 	</div>
 </body>
